--- a/Node/package.json
+++ b/Node/package.json
@@ -9,6 +9,8 @@
   "author": "Ramaj Johnson",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "live-server": "^1.2.2"
   }
 }
