--- a/Restaurant/package.json
+++ b/Restaurant/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "lodash": "^4.17.21"
   }
 }
