--- a/Restaurant/package.json
+++ b/Restaurant/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "https": "^1.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.0"
   }
 }
