--- a/SqlBlog/package.json
+++ b/SqlBlog/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mysql2": "^3.1.2"
+    "lodash": "^4.17.21",
+    "mysql2": "^3.1.2",
+    "uuid": "^9.0.0"
   }
 }
