--- a/MongoBlog/package.json
+++ b/MongoBlog/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "web-development-complete-guide",
+  "name": "mongoblog",
   "version": "1.0.0",
-  "description": "",
+  "description": "MongoDB Blog ",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Maximilian Schwarzmüller (Academind GmbH)",
-  "license": "MIT",
+  "author": "Ramaj Johnson",
+  "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   }
 }
