--- a/UserAuth/package.json
+++ b/UserAuth/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^5.2.0",
     "multer": "^1.4.5-lts.1"
   }
